# little-scale-modular-like-externals

./: README.md
src/cycle-2d~/: CLAUDE.md  README.md  cycle-2d~.c
src/cycle.fold~/: CLAUDE.md  README.md  cycle.fold~.c
src/decay~/: CLAUDE.md  README.md  decay~.c
src/easelfo~/: CLAUDE.md  README.md  easelfo~.c
src/harmosc~/: CLAUDE.md  README.md  harmosc~.c
src/modvca~/: CLAUDE.md  CMakeLists.txt  README.md  modvca~.c
src/noises~/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  TECHNICAL.md  noises~.c  noises~_22types_backup.c
src/physicslfo~/: physicslfo~.c
src/ramplfo~/: CLAUDE.md  README.md  ramplfo~.c
src/slewenv~/: CLAUDE.md  CMakeLists.txt  README.md  slewenv~.c
src/ssm2044~/: ssm2044~.c
src/tide~/: tides_wrapper.cpp  tide~.c
src/vactrol~/: CLAUDE.md  README.md  vactrol~.c
